tests/compile_fail/failure_to_infer_store_type.stderr
error[E0282]: type annotations needed
 --> tests/compile_fail/failure_to_infer_store_type.rs:3:1
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `downcast_ref_with_inference_hint`
  |
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider specifying the generic argument
  |
3 | #[memoized(key_expr = (), store_init = Default::default())]::<_>
  |                                                            +++++
